--- a/static/index.html
+++ b/static/index.html
@@ -1,35 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Agentic AI Staff Travel</title>
-    <style>
-        body { font-family: Arial, sans-serif; background-color: #fff; text-align: center; margin-top: 100px; }
-        input[type=text] { width: 60%; padding: 10px; font-size: 16px; }
-        button { padding: 10px 20px; font-size: 16px; margin-left: 10px; }
-        #response { margin-top: 20px; font-weight: bold; }
-    </style>
-</head>
-<body>
-    <h1>Agentic AI Staff Travel</h1>
-    <input type="text" id="userInput" placeholder="Enter your request (e.g., Book duty travel Delhi to Mumbai tomorrow)">
-    <button onclick="submitRequest()">Submit</button>
-    <div id="response"></div>
+<script>
+    let sessionId = Date.now().toString();
 
-    <script>
-        async function submitRequest() {
-            const input = document.getElementById('userInput').value;
-            const responseDiv = document.getElementById('response');
-            responseDiv.innerHTML = 'Processing...';
+    async function submitRequest() {
+        const input = document.getElementById('userInput').value;
+        const responseDiv = document.getElementById('response');
+        responseDiv.innerHTML = 'Processing...';
 
-            const res = await fetch('/api/process', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ query: input })
-            });
+        const res = await fetch('/api/process', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ query: input, sessionId })
+        });
 
-            const data = await res.json();
-            responseDiv.innerHTML = `Response: ${data.message}`;
-        }
-    </script>
-</body>
-</html>
+        const data = await res.json();
+        responseDiv.innerHTML = data.message.replace(/\n/g, '<br>');
+    }
+</script>
