--- a/static/index.html
+++ b/static/index.html
@@ -1,37 +1,69 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Agentic AI Staff Travel</title>
-    <style>
-        body { font-family: Arial, sans-serif; background-color: #fff; text-align: center; margin-top: 100px; }
-        input[type=text] { width: 60%; padding: 10px; font-size: 16px; }
-        button { padding: 10px 20px; font-size: 16px; margin-left: 10px; }
-        #response { margin-top: 20px; font-weight: bold; white-space: pre-line; }
-    </style>
+  <title>Agentic AI Staff Travel</title>
+  <style>
+    body { font-family: Arial; text-align: center; margin-top: 50px; }
+    input[type=text] { width: 60%; padding: 10px; font-size: 16px; }
+    button { padding: 10px 20px; font-size: 16px; margin-left: 10px; }
+    #response { margin-top: 20px; font-weight: bold; white-space: pre-line; }
+    .quick-replies button { margin: 5px; padding: 8px 12px; }
+    .flight-card { border: 1px solid #ddd; padding: 10px; margin: 10px auto; width: 300px; border-radius: 8px; }
+    .flight-card button { margin-top: 10px; }
+  </style>
 </head>
 <body>
-    <h1>Agentic AI Staff Travel</h1>
-    <input type="text" id="userInput" placeholder="Enter your request (e.g., Book duty travel Delhi to Mumbai tomorrow)">
-    <button onclick="submitRequest()">Submit</button>
-    <div id="response"></div>
+  <h1>Agentic AI Staff Travel</h1>
+  <input type="text" id="userInput" placeholder="Enter your request (e.g., Book duty travel Delhi to Mumbai)">
+  <button onclick="submitRequest()">Submit</button>
+  <div id="response"></div>
+  <div class="quick-replies" id="quickReplies"></div>
+  <div id="flightOptions"></div>
 
-    <script>
-        let sessionId = Date.now().toString();
+  <script>
+    let sessionId = Date.now().toString();
 
-        async function submitRequest() {
-            const input = document.getElementById('userInput').value;
-            const responseDiv = document.getElementById('response');
-            responseDiv.innerHTML = 'Processing...';
+    async function submitRequest(queryOverride) {
+      const input = queryOverride || document.getElementById('userInput').value;
+      const responseDiv = document.getElementById('response');
+      const quickRepliesDiv = document.getElementById('quickReplies');
+      const flightOptionsDiv = document.getElementById('flightOptions');
 
-            const res = await fetch('/api/process', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ query: input, sessionId })
-            });
+      responseDiv.innerHTML = 'Processing...';
+      quickRepliesDiv.innerHTML = '';
+      flightOptionsDiv.innerHTML = '';
 
-            const data = await res.json();
-            responseDiv.innerHTML = data.message.replace(/\n/g, '<br>');
-        }
-    </script>
+      const res = await fetch('/api/process', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ query: input, sessionId })
+      });
+
+      const data = await res.json();
+      responseDiv.innerHTML = '';
+
+      if (data.type === 'clarification') {
+        responseDiv.innerHTML = data.message;
+        quickRepliesDiv.innerHTML = `
+          <button onclick="submitRequest('Morning')">Morning ☀️</button>
+          <button onclick="submitRequest('Evening')">Evening 🌙</button>
+          <button onclick="submitRequest('Any Time')">Any Time ⏰</button>
+        `;
+      } else if (data.type === 'options') {
+        responseDiv.innerHTML = 'Here are your flight options:';
+        data.options.forEach(opt => {
+          flightOptionsDiv.innerHTML += `
+            <div class="flight-card">
+              <h3>${opt.airline}</h3>
+              <p>${opt.flight} - ${opt.time}</p>
+              <button onclick="submitRequest('Option ${opt.id}')">Select Option ${opt.id}</button>
+            </div>
+          `;
+        });
+      } else {
+        responseDiv.innerHTML = data.message;
+      }
+    }
+  </script>
 </body>
 </html>
